--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,12 @@
-<!-- Create your form here -->
+<h1>Student Form</h1>
+<%= form_tag students_path do %>
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token  %>
+
+    <label>Enter Student first Name:</label><br>
+    <%= text_field_tag :'first_name' %><br>
+
+    <label>Enter Student last Name:</label><br>
+    <%= text_field_tag :'last_name' %>
+
+    <%= submit_tag "Submit Student" %>
+<% end %>
